feat: language update endpoint for users & resolve message by language in alerts
