# src/main/java/com/devikapps/vaikaparts/repository/model/user/JUser.java
@@ -2,6 +2,7 @@ package com.devikapps.vaikaparts.repository.model.user;
 
 import static java.lang.String.format;
 
+import com.devikapps.vaikaparts.model.classifier.UserLanguage;
 import com.devikapps.vaikaparts.model.classifier.UserStatus;
 import com.devikapps.vaikaparts.model.classifier.UserType;
 import jakarta.persistence.Column;
@@ -13,8 +14,8 @@ import jakarta.persistence.Inheritance;
 import jakarta.persistence.InheritanceType;
 import jakarta.persistence.Table;
 import java.time.OffsetDateTime;
-
 import lombok.AllArgsConstructor;
+import lombok.Builder;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
@@ -70,6 +71,12 @@ public class JUser {
 
   @Column(name = "sms_notifications_enabled", nullable = false)
   private boolean smsNotificationsEnabled;
+
+  @Column(name = "preferred_language", nullable = false)
+  @Enumerated(EnumType.STRING)
+  @JdbcTypeCode(SqlTypes.NAMED_ENUM)
+  @Builder.Default
+  private UserLanguage preferredLanguage = UserLanguage.FR;
 
   @Override
   public String toString() {
